fix chat overflow

--- a/app/assets/stylesheets/team_messages.scss
+++ b/app/assets/stylesheets/team_messages.scss
@@ -16,6 +16,7 @@
 
 #team_messages {
   overflow-y: scroll;
+  overflow-x: hidden;
   scrollbar-width: thin;
   scroll-behavior: smooth;
 }
